Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18506

INTL.CPL: Wrongly writes invalid IME keyboard layout

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • RosDlls, Setup
    • None

    Description

      20221013-0.4.15-dev-5185-gfb86db1

      Our INTL.CPL writes invalid registry entries on IME installation.

      Steps:

      1. Install Japanese ReactOS (1.png).
      2. Open INTL.CPL (地域のオプション) from Control Panel (2.png).
      3. Click [Languages] (言語) (3.png).
      4. Check "Install East Asian files" (東アジア言語のファイルをインストールする) (4.png).
      5. Click [OK] button. Automated IME installation will start. Wait for it (5.png).
      6. Install IME (6.png with Wizard.
      7. It wrongly adds invalid Preload and Substitutes registry entries. Preload.png Substitutes.png

      KLID d0010411 is an invalid keyboard layout.

      Attachments

        1. 1.png
          1.png
          12 kB
        2. 2.png
          2.png
          111 kB
        3. 3.png
          3.png
          95 kB
        4. 4.png
          4.png
          85 kB
        5. 5.png
          5.png
          85 kB
        6. 6.png
          6.png
          113 kB
        7. Preload.png
          Preload.png
          105 kB
        8. Substitutes.png
          Substitutes.png
          103 kB

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            katayama_hirofumi_mz Katayama Hirofumi MZ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: