[INF][INTL.INF][SETUPLIB] We don't have preinstalled IMEs (#4774)

Don't write the preinstalled IME keyboard layouts in Chinese, Japanese and Korean (CJK). CORE-18506