base/setup/lib/lang/ja-JP.h
@@ -2,7 +2,7 @@
 
 MUI_LAYOUTS jaJPLayouts[] =
 {
-//    { L"0411", L"e0010411" },
+//    { L"0411", L"E0010411" }, // We don't have preinstalled IMEs.
     { L"0411", L"00000411" },
     { NULL, NULL }
 };
